@@ -5,6 +5,9 @@ What's New for OpenJPEG
 ! : changed
 + : added
 
+October 21, 2011
+* [mickael] WIP: enhance codestream index generation
+
 October 20, 2011
 * [mickael] WIP: isolate dump test suite
 * [mickael] WIP: remove memory leak about new jp2_read_marker function
